--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         }
         
         p {
+            color: white;
             font-size: 100px;
+            text-shadow: 2px 2px 5px black;
         }
     </style>
 </head>
