--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>𝔑 𝔦 𝔤 𝔤 𝔞   ℭ 𝔩 𝔞 𝔲 𝔰</title>
     <style>
         body {
             background-image: url('download.jpg');
